# moskitnie-setki

./: .cursorrules  .env  .env.deploy.example  .gitignore  .htaccess  .htaccess.backup  .htaccess.old  404.html  Dockerfile.web  Dockerfile.web.dev  README.md  app.vue  article-microdata.js  brand-microdata.js  breadcrumbs-microdata.js  breadcrumbs.js  contacts-microdata.js  docker-compose.dev.yml  docker-compose.yml  error.vue  event-microdata.js  faq-microdata.js  faq-section.html  log-consent.php  navigation-microdata.js  nginx.conf  nuxt.config.ts  offer-microdata.js  organization-microdata.js  package-lock.json  package.json  place-microdata.js  prices.js  reviews-microdata.js  reviews-section.html  robots.txt  seo-complete-report.md  seo-recommendations.md  service-microdata.js  sitemap-images.xml  (+6 more)
OLD_STATIC_BACKUP/: index.html
components/: Calculator.vue  DeliveryOptions.vue  FaqSection.vue  HeroImage.vue  HeroSection.vue  OrderForm.vue  OtherServicesLinks.vue  PriceDisplay.vue  SeoHead.vue  SeoTextBlock.vue  VideoLazy.vue
constants/: pricing.ts
moskit-api/: .env  .env.example  Cargo.toml  Dockerfile
moskit-api/src/: main.rs  npm.rs
moskit-api/src/handlers/: admin.rs  auth.rs  content.rs  dealer.rs  mod.rs  pricing.rs
moskit-core/: Cargo.toml
moskit-core/.sqlx/: query-b42ebede7f284ca738876ce21cc8b4656f52fa29c43035bb9cfc43a50dd56d89.json
moskit-core/src/: lib.rs
moskit-core/src/core/: error.rs  mod.rs  repository.rs
moskit-core/src/core/entity/: audit.rs  dealer.rs  mod.rs  order.rs  pricing.rs  product.rs  user.rs
moskit-core/src/core/repository/: mod.rs
moskit-core/src/core/repository/postgres/: audit.rs  dealer.rs  department.rs  mod.rs  order.rs  product.rs  user.rs
moskit-core/src/core/service/: mod.rs  notification.rs  pricing.rs  storage.rs
(+176 files in other folders)
