[package]
name = "moskit-api"
version = "0.1.0"
edition = "2021"

[dependencies]
moskit-core = { path = "../moskit-core" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = { version = "9", default-features = false }

[features]
default = []
